Fix selectionsquare layer logic, refactors